--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class="sketchfab-embed-wrapper">
-      <div>
+      <div class='iframe_container'>
         <iframe
           src=""
           id="api-frame"
@@ -24,12 +24,13 @@
           allowfullscreen
           mozallowfullscreen="true"
           webkitallowfullscreen="true"
-          style="width: 600px; height: 600px"
+          width="100%"
+          height="100%"
         ></iframe>
       </div>
       <div class="buttons">
-        <button id="nero">BLACK</button>
-        <button id="rosso">RED</button>
+        <button id="nero"></button>
+        <button id="rosso"></button>
       </div>
     </div>
     
@@ -37,8 +38,14 @@
 </html>
 <script src="./script.js"></script>
 <style>
-  .viewer.idle .controls > :not(.watermark):not(.no-fadeout) {
-    opacity: 1 !important;
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: 0;
+  }
+
+  body{
+    margin: 0;
   }
   .sketchfab-embed-wrapper {
     width: 100%;
@@ -46,17 +53,50 @@
     align-items: center;
   }
 
+  #nero{
+    background-color: black;
+  }
+
+  #rosso{
+    background-color: darkred;
+  }
+
   .buttons{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     height: 90vh;
     width: 20%;
   }
-
-  button{
+  .buttons button{
     width: 100px;
     height: 100px;
-    border-radius: 50%;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 2px 2px 50px 2px rgba(33,29,29,0.66);
+    -webkit-box-shadow: 2px 2px 50px 2px rgba(33,29,29,0.66);
+    -moz-box-shadow: 2px 2px 50px 2px rgba(33,29,29,0.66);
   }
+
+  .iframe_container {
+    width: 100%;
+    height: 100vh;
+  }
+  
+  @media (max-width: 750px) {
+  .sketchfab-embed-wrapper{
+    width: 100%;
+    flex-direction: column;
+  }
+  .buttons{
+    width: 100%;
+    flex-direction: row;
+    height: 30vh;
+  }
+  .iframe_container {
+    width: 100%;
+    height: 50vh;
+  }
+}
 </style>
